--- a/haushaltsbuch-api/pom.xml
+++ b/haushaltsbuch-api/pom.xml
@@ -46,5 +46,10 @@
             <artifactId>axon-core</artifactId>
             <version>${axon.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
 </project>
