--- a/haushaltsbuch-domäne/pom.xml
+++ b/haushaltsbuch-domäne/pom.xml
@@ -82,7 +82,7 @@
             <dependency>
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
-                <version>3.5.2</version>
+                <version>3.8.0</version>
             </dependency>
             <dependency>
                 <groupId>io.rest-assured</groupId>
@@ -302,7 +302,6 @@
 
         </pluginManagement>
 
-        <finalName>demo2</finalName>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -429,6 +428,16 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <attachClasses>true</attachClasses>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
