--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -26,6 +26,28 @@
         <skipTests>false</skipTests>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.github.haschi</groupId>
+                <artifactId>infrastructure-bom</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.haschi</groupId>
+                <artifactId>testing-bom</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
 
         <dependency>
