--- a/haushaltsbuch-test/pom.xml
+++ b/haushaltsbuch-test/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!--<parent>-->
-    <!--<artifactId>haushaltsbuch</artifactId>-->
-    <!--<groupId>com.github.haschi.haushaltsbuch</groupId>-->
-    <!--<version>0.0.1-SNAPSHOT</version>-->
-    <!--</parent>-->
+    <parent>
+        <artifactId>haushaltsbuch</artifactId>
+        <groupId>com.github.haschi.haushaltsbuch</groupId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
 
     <groupId>com.github.haschi.haushaltsbuch</groupId>
     <artifactId>haushaltsbuch-test</artifactId>
