--- a/haushaltsbuch-bom/pom.xml
+++ b/haushaltsbuch-bom/pom.xml
@@ -23,6 +23,7 @@
         <immutables.version>2.3.3</immutables.version>
         <slf4j.version>1.7.25</slf4j.version>
         <version.cukes>1.2.5</version.cukes>
+        <assertj.version>3.5.2</assertj.version>
     </properties>
 
     <dependencyManagement>
@@ -85,6 +86,12 @@
                 <groupId>info.cukes</groupId>
                 <artifactId>cucumber-picocontainer</artifactId>
                 <version>${version.cukes}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${assertj.version}</version>
             </dependency>
 
         </dependencies>
