--- a/haushaltsbuch-bom/pom.xml
+++ b/haushaltsbuch-bom/pom.xml
@@ -24,6 +24,7 @@
         <slf4j.version>1.7.25</slf4j.version>
         <version.cukes>1.2.5</version.cukes>
         <assertj.version>3.5.2</assertj.version>
+        <rest-assured.version>3.0.3</rest-assured.version>
     </properties>
 
     <dependencyManagement>
@@ -92,6 +93,12 @@
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
                 <version>${assertj.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.rest-assured</groupId>
+                <artifactId>rest-assured</artifactId>
+                <version>${rest-assured.version}</version>
             </dependency>
 
         </dependencies>
