--- a/haushaltsbuch-bom/pom.xml
+++ b/haushaltsbuch-bom/pom.xml
@@ -22,6 +22,7 @@
         <axon.version>3.0.5</axon.version>
         <immutables.version>2.3.3</immutables.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <jgroups.version>3.6.13.Final</jgroups.version>
         <version.cukes>1.2.5</version.cukes>
         <assertj.version>3.5.2</assertj.version>
         <rest-assured.version>3.0.3</rest-assured.version>
@@ -57,6 +58,12 @@
                 <groupId>org.axonframework</groupId>
                 <artifactId>axon-test</artifactId>
                 <version>${axon.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jgroups</groupId>
+                <artifactId>jgroups</artifactId>
+                <version>${jgroups.version}</version>
             </dependency>
 
             <dependency>
