--- a/haushaltsbuch-test/pom.xml
+++ b/haushaltsbuch-test/pom.xml
@@ -52,6 +52,12 @@
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.github.haschi.haushaltsbuch</groupId>
+                <artifactId>haushaltsbuch-domaene</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <classifier>classes</classifier>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -79,7 +85,6 @@
         <dependency>
             <groupId>com.github.haschi.haushaltsbuch</groupId>
             <artifactId>haushaltsbuch-domaene</artifactId>
-            <version>1.0-SNAPSHOT</version>
             <classifier>classes</classifier>
             <scope>test</scope>
         </dependency>
