--- a/haushaltsbuch-bom/pom.xml
+++ b/haushaltsbuch-bom/pom.xml
@@ -20,12 +20,14 @@
 
     <properties>
         <axon.version>3.0.5</axon.version>
-        <immutables.version>2.3.3</immutables.version>
+        <immutables.version>2.5.5</immutables.version>
         <slf4j.version>1.7.25</slf4j.version>
         <jgroups.version>3.6.13.Final</jgroups.version>
         <version.cukes>1.2.5</version.cukes>
         <assertj.version>3.8.0</assertj.version>
         <rest-assured.version>3.0.3</rest-assured.version>
+        <jackson.version>2.8.5</jackson.version>
+        <commons-lang3.version>3.4</commons-lang3.version>
     </properties>
 
     <dependencyManagement>
@@ -76,6 +78,18 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
                 <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.6</version>
             </dependency>
 
             <!-- Testing -->
