--- a/haushaltsbuch-api/pom.xml
+++ b/haushaltsbuch-api/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>haushaltsbuch-api</artifactId>
 
     <properties>
-        <axon.version>3.0.5</axon.version>
+
     </properties>
 
     <dependencyManagement>
@@ -34,13 +34,13 @@
         <dependency>
             <groupId>com.github.haschi</groupId>
             <artifactId>modeling</artifactId>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.immutables</groupId>
             <artifactId>value</artifactId>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
