--- a/haushaltsbuch-bom/pom.xml
+++ b/haushaltsbuch-bom/pom.xml
@@ -95,6 +95,18 @@
             <!-- Testing -->
 
             <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+            </dependency>
+
+            <dependency>
+                <groupId>nl.jqno.equalsverifier</groupId>
+                <artifactId>equalsverifier</artifactId>
+                <version>2.1.1</version>
+            </dependency>
+
+            <dependency>
                 <groupId>info.cukes</groupId>
                 <artifactId>cucumber-java8</artifactId>
                 <version>${version.cukes}</version>
