Zwischenstand: API Szenarien gehen noch nicht

--- a/haushaltsbuch-api/pom.xml
+++ b/haushaltsbuch-api/pom.xml
@@ -12,6 +12,7 @@
 
     <name>${project.artifactId}-${project.version}</name>
     <artifactId>haushaltsbuch-api</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
     <properties>
 
