--- a/haushaltsbuch-abfrage/pom.xml
+++ b/haushaltsbuch-abfrage/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>haushaltsbuch-abfrage</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
 
     <packaging>war</packaging>
     <name>${project.artifactId}-${project.version}</name>
@@ -171,11 +171,6 @@
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
         </dependency>
-        <dependency>
-            <groupId>com.github.haschi.haushaltsbuch</groupId>
-            <artifactId>haushaltsbuch-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -243,7 +238,7 @@
 
         </pluginManagement>
 
-        <finalName>demo2</finalName>
+        <finalName>abfrage</finalName>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -349,6 +344,7 @@
                             <goal>start</goal>
                         </goals>
                         <configuration>
+                            <skip>${skipTests}</skip>
                             <images>
                             <image>
                                 <name>mongo</name>
@@ -367,6 +363,9 @@
                         <goals>
                             <goal>stop</goal>
                         </goals>
+                        <configuration>
+                            <skip>${skipTests}</skip>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
