--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,12 @@
                 <artifactId>domaene</artifactId>
                 <version>${project.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>com.github.haschi.haushaltsbuch</groupId>
+                <artifactId>haushaltsbuch-domaene</artifactId>
+                <version>${project.version}</version>
+                <classifier>classes</classifier>
+            </dependency>
             <dependency>
                 <groupId>com.github.haschi.haushaltsbuch</groupId>
                 <artifactId>haushaltsbuch-domaene</artifactId>
