Zwischenstand: Haushaltsbuch Szenarien (ReST) funktionieren mit manuell hergestellter Testumgebung

--- a/haushaltsbuch-domäne/pom.xml
+++ b/haushaltsbuch-domäne/pom.xml
@@ -233,6 +233,11 @@
                     <artifactId>docker-maven-plugin</artifactId>
                     <version>0.21.0</version>
                 </plugin>
+                <plugin>
+                    <groupId>io.fabric8</groupId>
+                    <artifactId>fabric8-maven-plugin</artifactId>
+                    <version>3.5.19</version>
+                </plugin>
             </plugins>
 
         </pluginManagement>
@@ -375,6 +380,19 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                     <attachClasses>true</attachClasses>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>fabric8-maven-plugin</artifactId>
+
+                <executions>
+                    <execution>
+                        <id>package</id>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
