--- a/haushaltsbuch-bom/pom.xml
+++ b/haushaltsbuch-bom/pom.xml
@@ -28,6 +28,7 @@
         <rest-assured.version>3.0.3</rest-assured.version>
         <jackson.version>2.8.5</jackson.version>
         <commons-lang3.version>3.4</commons-lang3.version>
+        <citrus.version>2.7.2</citrus.version>
     </properties>
 
     <dependencyManagement>
@@ -146,7 +147,40 @@
                 <version>${rest-assured.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.consol.citrus</groupId>
+                <artifactId>citrus-core</artifactId>
+                <version>${citrus.version}</version>
+
+            </dependency>
+
+            <dependency>
+                <groupId>com.consol.citrus</groupId>
+                <artifactId>citrus-java-dsl</artifactId>
+                <version>${citrus.version}</version>
+
+            </dependency>
+
+            <dependency>
+                <groupId>com.consol.citrus</groupId>
+                <artifactId>citrus-http</artifactId>
+                <version>${citrus.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.consol.citrus</groupId>
+                <artifactId>citrus-docker</artifactId>
+                <version>${citrus.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
